# herdr-configurable-picker

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SPEC.md  herdr-plugin.toml
.github/workflows/: ci.yml
src/: app.rs  config.rs  git.rs  herdr_client.rs  host_config.rs  icons.rs  keymap.rs  main.rs  model.rs  search.rs  tree.rs  ui.rs
