[package]
name = "herdr-configurable-picker"
version = "1.0.0"
edition = "2021"
rust-version = "1.85"
description = "Goto picker for herdr: Emacs-style movement, IME-safe keys, fully configurable bindings"
license = "MIT"
repository = "https://github.com/yoshiori/herdr-configurable-picker"
readme = "README.md"

[[bin]]
name = "herdr-configurable-picker"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
